nuclear/style/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> rulesets
Rule 1     rulesets -> ruleset
Rule 2     rulesets -> rulesets ruleset
Rule 3     ruleset -> selector block
Rule 4     selector -> selector el_selector
Rule 5     selector -> el_selector
Rule 6     el_selector -> tag_selector
Rule 7     el_selector -> el_selector class_selector
Rule 8     el_selector -> el_selector state_selector
Rule 9     tag_selector -> ID
Rule 10    class_selector -> PUNCT ID
Rule 11    state_selector -> ASSIGN ID
Rule 12    decls -> decls SEP decl
Rule 13    decls -> decl
Rule 14    decl -> property ASSIGN value
Rule 15    value -> NORMSTRING
Rule 16    value -> NUMBER
Rule 17    property -> ID
Rule 18    block -> BG_BLOCK decls END_BLOCK

Terminals, with rules where they appear

ASSIGN               : 11 14
BG_BLOCK             : 18
END_BLOCK            : 18
ID                   : 9 10 11 17
NORMSTRING           : 15
NUMBER               : 16
PUNCT                : 10
SEP                  : 12
error                : 

Nonterminals, with rules where they appear

block                : 3
class_selector       : 7
decl                 : 12 13
decls                : 12 18
el_selector          : 4 5 7 8
property             : 14
ruleset              : 1 2
rulesets             : 2 0
selector             : 3 4
state_selector       : 8
tag_selector         : 6
value                : 14

Parsing method: LALR

state 0

    (0) S' -> . rulesets
    (1) rulesets -> . ruleset
    (2) rulesets -> . rulesets ruleset
    (3) ruleset -> . selector block
    (4) selector -> . selector el_selector
    (5) selector -> . el_selector
    (6) el_selector -> . tag_selector
    (7) el_selector -> . el_selector class_selector
    (8) el_selector -> . el_selector state_selector
    (9) tag_selector -> . ID

    ID              shift and go to state 6

    rulesets                       shift and go to state 1
    ruleset                        shift and go to state 2
    selector                       shift and go to state 3
    el_selector                    shift and go to state 4
    tag_selector                   shift and go to state 5

state 1

    (0) S' -> rulesets .
    (2) rulesets -> rulesets . ruleset
    (3) ruleset -> . selector block
    (4) selector -> . selector el_selector
    (5) selector -> . el_selector
    (6) el_selector -> . tag_selector
    (7) el_selector -> . el_selector class_selector
    (8) el_selector -> . el_selector state_selector
    (9) tag_selector -> . ID

    ID              shift and go to state 6

    ruleset                        shift and go to state 7
    selector                       shift and go to state 3
    el_selector                    shift and go to state 4
    tag_selector                   shift and go to state 5

state 2

    (1) rulesets -> ruleset .

    ID              reduce using rule 1 (rulesets -> ruleset .)
    $end            reduce using rule 1 (rulesets -> ruleset .)


state 3

    (3) ruleset -> selector . block
    (4) selector -> selector . el_selector
    (18) block -> . BG_BLOCK decls END_BLOCK
    (6) el_selector -> . tag_selector
    (7) el_selector -> . el_selector class_selector
    (8) el_selector -> . el_selector state_selector
    (9) tag_selector -> . ID

    BG_BLOCK        shift and go to state 10
    ID              shift and go to state 6

    block                          shift and go to state 8
    el_selector                    shift and go to state 9
    tag_selector                   shift and go to state 5

state 4

    (5) selector -> el_selector .
    (7) el_selector -> el_selector . class_selector
    (8) el_selector -> el_selector . state_selector
    (10) class_selector -> . PUNCT ID
    (11) state_selector -> . ASSIGN ID

    BG_BLOCK        reduce using rule 5 (selector -> el_selector .)
    ID              reduce using rule 5 (selector -> el_selector .)
    PUNCT           shift and go to state 13
    ASSIGN          shift and go to state 14

    class_selector                 shift and go to state 11
    state_selector                 shift and go to state 12

state 5

    (6) el_selector -> tag_selector .

    PUNCT           reduce using rule 6 (el_selector -> tag_selector .)
    ASSIGN          reduce using rule 6 (el_selector -> tag_selector .)
    BG_BLOCK        reduce using rule 6 (el_selector -> tag_selector .)
    ID              reduce using rule 6 (el_selector -> tag_selector .)


state 6

    (9) tag_selector -> ID .

    PUNCT           reduce using rule 9 (tag_selector -> ID .)
    ASSIGN          reduce using rule 9 (tag_selector -> ID .)
    BG_BLOCK        reduce using rule 9 (tag_selector -> ID .)
    ID              reduce using rule 9 (tag_selector -> ID .)


state 7

    (2) rulesets -> rulesets ruleset .

    ID              reduce using rule 2 (rulesets -> rulesets ruleset .)
    $end            reduce using rule 2 (rulesets -> rulesets ruleset .)


state 8

    (3) ruleset -> selector block .

    ID              reduce using rule 3 (ruleset -> selector block .)
    $end            reduce using rule 3 (ruleset -> selector block .)


state 9

    (4) selector -> selector el_selector .
    (7) el_selector -> el_selector . class_selector
    (8) el_selector -> el_selector . state_selector
    (10) class_selector -> . PUNCT ID
    (11) state_selector -> . ASSIGN ID

    BG_BLOCK        reduce using rule 4 (selector -> selector el_selector .)
    ID              reduce using rule 4 (selector -> selector el_selector .)
    PUNCT           shift and go to state 13
    ASSIGN          shift and go to state 14

    class_selector                 shift and go to state 11
    state_selector                 shift and go to state 12

state 10

    (18) block -> BG_BLOCK . decls END_BLOCK
    (12) decls -> . decls SEP decl
    (13) decls -> . decl
    (14) decl -> . property ASSIGN value
    (17) property -> . ID

    ID              shift and go to state 18

    decls                          shift and go to state 15
    decl                           shift and go to state 16
    property                       shift and go to state 17

state 11

    (7) el_selector -> el_selector class_selector .

    PUNCT           reduce using rule 7 (el_selector -> el_selector class_selector .)
    ASSIGN          reduce using rule 7 (el_selector -> el_selector class_selector .)
    BG_BLOCK        reduce using rule 7 (el_selector -> el_selector class_selector .)
    ID              reduce using rule 7 (el_selector -> el_selector class_selector .)


state 12

    (8) el_selector -> el_selector state_selector .

    PUNCT           reduce using rule 8 (el_selector -> el_selector state_selector .)
    ASSIGN          reduce using rule 8 (el_selector -> el_selector state_selector .)
    BG_BLOCK        reduce using rule 8 (el_selector -> el_selector state_selector .)
    ID              reduce using rule 8 (el_selector -> el_selector state_selector .)


state 13

    (10) class_selector -> PUNCT . ID

    ID              shift and go to state 19


state 14

    (11) state_selector -> ASSIGN . ID

    ID              shift and go to state 20


state 15

    (18) block -> BG_BLOCK decls . END_BLOCK
    (12) decls -> decls . SEP decl

    END_BLOCK       shift and go to state 21
    SEP             shift and go to state 22


state 16

    (13) decls -> decl .

    END_BLOCK       reduce using rule 13 (decls -> decl .)
    SEP             reduce using rule 13 (decls -> decl .)


state 17

    (14) decl -> property . ASSIGN value

    ASSIGN          shift and go to state 23


state 18

    (17) property -> ID .

    ASSIGN          reduce using rule 17 (property -> ID .)


state 19

    (10) class_selector -> PUNCT ID .

    PUNCT           reduce using rule 10 (class_selector -> PUNCT ID .)
    ASSIGN          reduce using rule 10 (class_selector -> PUNCT ID .)
    BG_BLOCK        reduce using rule 10 (class_selector -> PUNCT ID .)
    ID              reduce using rule 10 (class_selector -> PUNCT ID .)


state 20

    (11) state_selector -> ASSIGN ID .

    PUNCT           reduce using rule 11 (state_selector -> ASSIGN ID .)
    ASSIGN          reduce using rule 11 (state_selector -> ASSIGN ID .)
    BG_BLOCK        reduce using rule 11 (state_selector -> ASSIGN ID .)
    ID              reduce using rule 11 (state_selector -> ASSIGN ID .)


state 21

    (18) block -> BG_BLOCK decls END_BLOCK .

    ID              reduce using rule 18 (block -> BG_BLOCK decls END_BLOCK .)
    $end            reduce using rule 18 (block -> BG_BLOCK decls END_BLOCK .)


state 22

    (12) decls -> decls SEP . decl
    (14) decl -> . property ASSIGN value
    (17) property -> . ID

    ID              shift and go to state 18

    decl                           shift and go to state 24
    property                       shift and go to state 17

state 23

    (14) decl -> property ASSIGN . value
    (15) value -> . NORMSTRING
    (16) value -> . NUMBER

    NORMSTRING      shift and go to state 26
    NUMBER          shift and go to state 27

    value                          shift and go to state 25

state 24

    (12) decls -> decls SEP decl .

    END_BLOCK       reduce using rule 12 (decls -> decls SEP decl .)
    SEP             reduce using rule 12 (decls -> decls SEP decl .)


state 25

    (14) decl -> property ASSIGN value .

    END_BLOCK       reduce using rule 14 (decl -> property ASSIGN value .)
    SEP             reduce using rule 14 (decl -> property ASSIGN value .)


state 26

    (15) value -> NORMSTRING .

    END_BLOCK       reduce using rule 15 (value -> NORMSTRING .)
    SEP             reduce using rule 15 (value -> NORMSTRING .)


state 27

    (16) value -> NUMBER .

    END_BLOCK       reduce using rule 16 (value -> NUMBER .)
    SEP             reduce using rule 16 (value -> NUMBER .)

